(fix) button's text wrapping

--- a/src/components/custom/header/s.module.scss
+++ b/src/components/custom/header/s.module.scss
@@ -40,6 +40,7 @@
 .endWrapper {
   align-items: center;
   display: flex;
+  flex-shrink: 0;
   gap: 8px;
   margin-left: auto;
 }
